JVM memory optimizations